# fprime-system-reference

./: .gitattributes  .gitignore  .gitmodules  README.md  libcamera-aarch32.txt  libcamera-aarch64.txt  process_raw_image.py  requirements.txt
Drv/: CMakeLists.txt  README.md
Drv/LinuxPwmDriver/: CMakeLists.txt  LinuxPwmDriver.cpp  LinuxPwmDriver.cpp-template  LinuxPwmDriver.fpp  LinuxPwmDriver.hpp  LinuxPwmDriver.hpp-template
Drv/LinuxPwmDriver/docs/: sdd.md
Drv/PwmDriverPorts/: CMakeLists.txt  PwmDriverPorts.fpp
SystemRef/: CMakeLists.txt
SystemRef/Top/: CMakeLists.txt  instances.fpp  topology.fpp
SystemReference/: CMakeLists.txt  README.md  settings.ini
SystemReference/Com/: CMakeLists.txt  README.md
SystemReference/Com/XBee/: CMakeLists.txt  XBee.cpp  XBee.fpp  XBee.fpp.backup  XBee.hpp
SystemReference/Gnc/: CMakeLists.txt
SystemReference/Gnc/Actuator/: Actuator.cpp  Actuator.fpp  Actuator.hpp  Actuator_stub.cpp  CMakeLists.txt  README.md
SystemReference/Gnc/Imu/: CMakeLists.txt  Imu.cpp  Imu.fpp  Imu.hpp
SystemReference/Gnc/ImuPort/: CMakeLists.txt  ImuPort.fpp
SystemReference/Payload/: CMakeLists.txt
SystemReference/Payload/Camera/: CMakeLists.txt  Camera.cpp  Camera.fpp  Camera.hpp  Capture.c  Capture.h
SystemReference/Payload/Camera/docs/: IntegrationGuide.md  sdd.md
SystemReference/Payload/Camera/test/ut/: TEST_1.mov  TestMain.cpp  Tester.cpp  Tester.hpp
SystemReference/Payload/ImagePort/: CMakeLists.txt  ImagePort.fpp
SystemReference/Payload/ImageProcessor/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.fpp  ImageProcessor.hpp
SystemReference/Payload/ImageProcessor/docs/: sdd.md
SystemReference/Payload/ImageProcessor/test/ut/: TestMain.cpp  Tester.cpp  Tester.hpp
SystemReference/Top/: CMakeLists.txt  Main.cpp  SystemReferenceTelemetryPackets.fppi  SystemReferenceTopologyDefs.cpp  SystemReferenceTopologyDefs.hpp  instances.fpp  topology.fpp
SystemReference/config/: BufferManagerComponentImplCfg.hpp  DpCatalogCfg.hpp  DpCfg.hpp  FPrimeNumericalConfig.h  FileDownlinkCfg.hpp  FpConfig.fpp  FpConfig.h  FpConfig.hpp  TlmPacketizerCfg.hpp
docs/course/: appendix-1.md  appendix-2.md  appendix-3.md  component-implementation.md  hardware.md  introduction.md  prerequisites.md  requirements-and-design.md  teams.md  topology-integration.md  unit-testing.md
docs/integration/: gnc-sensor-integration.md  xbee-radio-integration.md
docs/integration/camera/: building-system-ref-with-libcamera.md  (+2 more)
ground-tools/: README.md
(+11 files in other folders)
